<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/green_primary"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center_vertical">

        <!-- Gambar -->
        <ImageView
            android:id="@+id/imageHistory"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/gambar_riwayat_penyakit" />

        <!-- Konten tengah: Nama dan tanggal -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtDiseaseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_penyakit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/yellow_accent" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tanggal"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="4dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_marginEnd="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/hapus_riwayat"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            app:tint="@android:color/white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
