<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardBackgroundColor="@color/green_primary"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/diseaseImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            android:contentDescription="@string/gambar_penyakit_daun"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="2dp">

            <TextView
                android:id="@+id/diseaseName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_penyakit"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/yellow_accent"/>

            <TextView
                android:id="@+id/diseaseDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi_singkat_penyakit"
                android:justificationMode="inter_word"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginTop="4dp"
                android:paddingEnd="2dp"
                android:layout_marginBottom="2dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
